[gd_scene load_steps=31 format=2]

[ext_resource path="res://Script/Bullet_UI.gd" type="Script" id=1]
[ext_resource path="res://assets/Items/fire-3.png" type="Texture" id=2]
[ext_resource path="res://assets/Explosion/Explosion_Sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/Shadows/light.png" type="Texture" id=4]
[ext_resource path="res://Scene/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Script/HitBoxPlayer.gd" type="Script" id=6]
[ext_resource path="res://Script/Artifacts/Scepter.gd" type="Script" id=7]
[ext_resource path="res://assets/Items/player-weapon-2.png" type="Texture" id=8]
[ext_resource path="res://assets/Items/fire-1.png" type="Texture" id=9]

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=1]
resource_local_to_scene = true
offsets = PoolRealArray( 0, 0.244094, 0.897638, 1 )
colors = PoolColorArray( 1, 0.591797, 0, 1, 0.746094, 0, 0, 1, 0.422033, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="CanvasItemMaterial" id=21]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.389423, 0.413462, 0.548077, 0.567308, 0.701923, 0.745192, 1 )
colors = PoolColorArray( 1, 0.917647, 0, 1, 1, 0.917647, 0, 1, 1, 0.635294, 0.054902, 1, 1, 0.635294, 0.054902, 1, 1, 0.215686, 0.133333, 1, 1, 0.215686, 0.133333, 1, 0.168627, 0.168627, 0.168627, 1, 0.168627, 0.168627, 0.168627, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
width = 40
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
width = 40
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=22]
resource_local_to_scene = true
lifetime_randomness = 0.46
trail_size_modifier = SubResource( 10 )
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
gravity = Vector3( 0, -200, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.8
scale_curve = SubResource( 6 )
color_ramp = SubResource( 12 )
anim_speed = 1.0

[sub_resource type="CircleShape2D" id=18]
radius = 27.8188

[sub_resource type="Animation" id=9]
length = 0.001

[sub_resource type="Animation" id=13]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fire:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2, 3, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light/Light2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6.17353, 7.29601 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light/Light2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1.2, 1.2 ), Vector2( 1.1, 1.1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light/Light2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.352941, 0, 1 ), Color( 0.886275, 0.239216, 0.0156863, 1 ), Color( 0.784314, 0.266667, 0.0627451, 1 ), Color( 0.862745, 0.32549, 0.0823529, 1 ), Color( 0.85098, 0.435294, 0.227451, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light/Light2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Light/Light2D2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6.04651, 5.77539 ), Vector2( -6.04651, 5.77539 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "teleport"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ), Vector2( 0.05, 0.05 ), Vector2( 0.2, 0.2 ), Vector2( 0.3, 0.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=14]

[sub_resource type="DynamicFontData" id=15]
font_path = "res://assets/Font_Textur/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=16]
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=20]
font_path = "res://assets/Font_Textur/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 20 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/Font_Textur/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[node name="Scepter" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
light_label = NodePath("Label")

[node name="scepter" type="Sprite" parent="."]
position = Vector2( 11, 0 )
rotation = 2.35643
texture = ExtResource( 8 )
flip_h = true

[node name="fire" type="Sprite" parent="."]
position = Vector2( 35, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
hframes = 4
frame = 2

[node name="Particles2D" type="CPUParticles2D" parent="fire"]
modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
material = SubResource( 8 )
amount = 50
lifetime = 2.0
explosiveness = 0.03
randomness = 1.0
lifetime_randomness = 0.3
local_coords = false
gravity = Vector2( -6, -20 )
initial_velocity = 25.0
initial_velocity_random = 1.0
orbit_velocity_random = 1.0
radial_accel = -3.0
radial_accel_random = 1.0
tangential_accel_random = 1.0
scale_amount = 0.7
color_ramp = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RetroExplosion" type="Particles2D" parent="."]
visible = false
material = SubResource( 21 )
position = Vector2( 35, 2 )
scale = Vector2( 0.005, 0.005 )
z_index = 1
amount = 50
lifetime = 0.4
explosiveness = 0.3
visibility_rect = Rect2( -50, -50, 100, 100 )
local_coords = false
process_material = SubResource( 22 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 5, 1 )
rotation = 0.777393
polygon = PoolVector2Array( 3.58573, -21.4004, 9.0832, -26.8162, 9.06752, -31.939, 14.8529, -31.9234, 19.5519, -37.2949, 24.6409, -31.8675, 30.0955, -31.8077, 29.9895, -26.5639, 35.666, -21.3532, 30.0609, -16.0517, 30.0692, -10.8549, 25.2362, -10.9225, 19.5997, -5.45694, 14.252, -10.9355, 12.1141, -10.9255, -24.0061, 24.8883, -26.9879, 24.9864, -27.0162, 22.11, 9.08091, -14.1209, 9.08534, -15.9862 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.57952, 0 )
shape = SubResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
reset_on_save = false
playback_speed = 0.7
anims/RESET = SubResource( 9 )
anims/idle = SubResource( 13 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/teleport = SubResource( 19 )

[node name="HitBoxPivot" type="Position2D" parent="."]
position = Vector2( -4.76837e-07, 4.76837e-07 )
rotation = -1.56489

[node name="HitBox" parent="HitBoxPivot" instance=ExtResource( 5 )]
visible = false
collision_mask = 8
script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBoxPivot/HitBox"]
position = Vector2( -0.964545, 6.0058 )
rotation = 2.35856
polygon = PoolVector2Array( 3.36589, -20.5346, 8.68834, -26.422, 8.87563, -32.1343, 14.7752, -32.228, 19.1765, -37.1911, 24.4848, -32.0233, 30.1415, -32.0701, 30.1883, -26.4134, 35.6579, -21.5525, 30.6011, -16.3084, 30.5074, -10.3152, 23.959, -10.0979, 19.0503, -5.10741, 14.0598, -10.0161, 11.5913, -10.6898, -24.5316, 26.3667, -29.4636, 28.5288, -26.6821, 22.8488, 8.37977, -12.7976, 8.35638, -15.626 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBoxPivot/HitBox"]
position = Vector2( 0.200817, 33.9994 )
shape = SubResource( 14 )

[node name="fireballpos" type="Position2D" parent="."]
position = Vector2( 35, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = -50.0
margin_top = -38.0
margin_right = -42.0
margin_bottom = -22.0
rect_scale = Vector2( 1.7, 1.7 )
rect_pivot_offset = Vector2( 4.17112, 8.65482 )
custom_fonts/font = SubResource( 16 )
text = "P"
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="Label"]
position = Vector2( 3.56355, 6.31525 )
scale = Vector2( 0.238281, 0.267578 )
texture = ExtResource( 4 )
texture_scale = 0.4
color = Color( 1, 0, 0, 1 )
energy = 0.7

[node name="Light" type="Node2D" parent="."]
position = Vector2( 37, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="Light"]
texture = ExtResource( 4 )
texture_scale = 0.5
color = Color( 1, 0.352941, 0, 1 )

[node name="Light2D2" type="Light2D" parent="Light"]
position = Vector2( -2, 0 )
scale = Vector2( 0.246093, 0.265625 )
texture = ExtResource( 4 )
texture_scale = 0.1
color = Color( 0.796078, 0.168627, 0, 1 )
energy = 0.6

[node name="Bullet_UI" type="CanvasLayer" parent="."]
layer = 80
script = ExtResource( 1 )

[node name="FlameBullet" type="Control" parent="Bullet_UI"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -17.0
margin_right = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="TextureRect" parent="Bullet_UI/FlameBullet"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -2.05289
margin_top = -17.6678
margin_right = 61.9471
margin_bottom = 46.3322
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="Label" parent="Bullet_UI/FlameBullet"]
margin_left = 16.8095
margin_top = 1.19843
margin_right = 20.8095
margin_bottom = 17.1984
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Bullet_UI/FlameBullet"]
margin_left = 23.0
margin_top = 2.0
margin_right = 44.0
margin_bottom = 18.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "##"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Scepter_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Scepter_body_exited"]
[connection signal="p_down" from="." to="Bullet_UI" method="_on_Scepter_p_down"]
[connection signal="p_up" from="." to="Bullet_UI" method="_on_Scepter_p_up"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
